--- a/Nexter-Backup.html
+++ b/Nexter-Backup.html
@@ -37,6 +37,37 @@
 },
 
 
+{
+"name": "DOO DEE",
+"author": "ใช้เฉพาะกลุ่ม PLAYID เท่านั้น",
+"image": "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSsUHi7Fw9RjsjzGz-tRIBKhFIENLvmUa-aAA&s",
+"url": "https://pastebin.com/raw/aa1V1hMp",
+"import": "true"
+},
+
+
+{"name": "Watchlakorn.In(ละคร)",
+"author": "PL4U-Watchlakorn.In",
+"info": "Watch Lakorn ที่สุดของคนรักละคร",
+"image": "https://media4.giphy.com/media/5ZYFKsDQV5y0cgsoin/giphy.gif",
+"url":"https://shorturl.at/aioPY",
+"import": "true"},
+
+{
+"name": "TJC_CH FREE ",
+"image": "https://raw.githubusercontent.com/tongtjc/Pic/main/Ch.png?",
+"url": "https://raw.githubusercontent.com/tongtjc/movie_add/main/mylist",
+"import": true
+}, 
+
+{
+"name": "Luxdo Streaming TV PL",
+"author": "Luxdo TheMovieS Update 16/07/66 ",
+"image": "https://drive.google.com/uc?id=19oeAX0kf_LxYofdD-G0vj9UPCHdLpHMr",
+"url": "https://pastebin.com/raw/uxC5vqSe",
+"import": "true"
+},
+
 
 
 
