--- a/Nexter-Backup.html
+++ b/Nexter-Backup.html
@@ -69,6 +69,15 @@
 },
 
 
+{
+"name": "Thai Serire",
+"author": "Nexter",
+"image": "https://img5.pic.in.th/file/secure-sv1/S__33333250.jpeg",
+"url": "https://pastebin.com/raw/ziivZc6z",
+"import": "true"
+},
+
+
 
 
 
