--- a/Nexter-Backup.html
+++ b/Nexter-Backup.html
@@ -70,7 +70,7 @@
 
 
 {
-"name": "Thai Serire",
+"name": "Thai Series",
 "author": "Nexter",
 "image": "https://img5.pic.in.th/file/secure-sv1/S__33333250.jpeg",
 "url": "https://pastebin.com/raw/ziivZc6z",
