--- a/DigitalTV.html
+++ b/DigitalTV.html
@@ -1,6 +1,6 @@
 {
 "name": "TV Digital",
-"image": "https://v1.igetweb.com/www/aosat/article/art_42205644.png",
+"image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/KM-LOGO/2.png",
 "url": "https://pastebin.com/raw/AJM6tjku",
 "stations" : [ 
 
