--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -1,6 +1,6 @@
 {
 "name": "Movie<โรงหนังของแล้ม>",
-"image": "https://leam.tech/assets/navbar/logo.png",
+"image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/KM-LOGO/3.png",
 "url": "https://github.com/Tonnexter/Tonnexter/edit/KhunKamMee/Nexter%20Moviees.html", 
 "author": "LeamLeam",
 "info": "โรงหนังของแล้ม",
