--- a/Nexter-PremierLeague.html
+++ b/Nexter-PremierLeague.html
@@ -1,8 +1,8 @@
 {
 "name": "NexterPremierLeague",
 "author": "Nexter",
-"image": "https://upload.wikimedia.org/wikipedia/en/thumb/f/f2/Premier_League_Logo.svg/1200px-Premier_League_Logo.svg.png",
-"url": "https://pastebin.com/Us7A4Taf",
+"image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/KM-LOGO/4.png",
+"url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Nexter-PremierLeague.html",
 "info": "Nexter-PremierLeague",
 
  "groups": [
