--- a/MovieChannel.html
+++ b/MovieChannel.html
@@ -1,6 +1,6 @@
 {
 "name": "Movie Channel",
-"image": "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTIiY8kA9bvJesP3mEnV21O2FXoCTVq-wRSdw&usqp=CAU",
+"image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/KM-LOGO/5.png",
 "url": "https://pastebin.com/g6wc2gYB",
 "stations" : [
 
