--- a/MovieChannel.html
+++ b/MovieChannel.html
@@ -1,7 +1,7 @@
 {
 "name": "Movie Channel",
 "image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/KM-LOGO/5.png",
-"url": "https://pastebin.com/g6wc2gYB",
+"url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/MovieChannel.html",
 "stations" : [
 
 
