--- a/News Channel.html
+++ b/News Channel.html
@@ -1,7 +1,7 @@
 {
 "name": "News Channel",
-"image": "https://upload.wikimedia.org/wikipedia/commons/thumb/b/b1/CNN.svg/1200px-CNN.svg.png",
-"url": "https://pastebin.com/PZX28Wp1",
+"image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/KM-LOGO/6.png",
+"url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/News%20Channel.html",
 "stations" : [
 
 
