--- a/Kids.html
+++ b/Kids.html
@@ -1,7 +1,7 @@
 {
 "name"              :     "Kids",
-"image"             :     "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRijX04JzTg1tid1MV5KkEvldG7Wdj7Jox96Q&usqp=CAU",
-"url"               :     "https://pastebin.com/06PhKi7E",
+"image"             :     "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/KM-LOGO/7.png",
+"url"               :     "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Kids.html",
 "stations" : [
 
 
