--- a/MOVIeSERIES.html
+++ b/MOVIeSERIES.html
@@ -1,7 +1,7 @@
 { 
 "name"              :     "MOVIE & SERIES",
-"image"             :     "https://png.pngtree.com/png-clipart/20220509/original/pngtree-live-streaming-png-logo-png-image_7667572.png",
-"url"               :     "https://pastebin.com/bQLidaua",
+"image"             :     "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/KM-LOGO/10.png",
+"url"               :     "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/MOVIeSERIES.html",
  
 "groups": [
  
