--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -7,6 +7,19 @@
 "stations" : [
 
 
+
+
+{  
+name:"Red One เรด วัน (2024)",
+image:"https://img.inwiptv.net/postor/20241109061453cdqLnri3NEGcmfnqwk2TSIYtddg.jpg",
+url:"https://m1free.inwstream.com:1936/movie4/Red_One_2024/Red_One_2024_thr_v1.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+    
+
+    
 {  
 name:"พลิกตำนานฟัดทะลุเวลา (2024)",
 image:"https://img.inwiptv.net/postor/20241105013353qbImUt1d3itXcB81BCItPZlfbyr.jpg",
