--- a/NexterPremierLeague1.html
+++ b/NexterPremierLeague1.html
@@ -9,6 +9,15 @@
  "stations": [
 
 {
+     "name": "TruePremierFootball 1ST",
+     "image": "https://dookeela.live/uploads/1664499665.png",
+     "url": "https://dolive.thaim3u.com/tFQe38qxw4awKkMJD3kcfcekVSrfLnY9/siamsport-1/playlist.m3u8",
+     "referer": "https://freetvdd.com",
+     "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
+    },
+
+{
      "name": "TruePremierFootball 1ID",
      "image": "https://dookeela.live/uploads/1664499665.png",
      "url": "https://playidtv24.vercel.app/stream/now/premier1.m3u8",
