--- a/NexterPremierLeague1.html
+++ b/NexterPremierLeague1.html
@@ -10,7 +10,7 @@
 
 
 {
-     "name": "TruePremierFootball 1ID",
+     "name": "TruePremierFootball 1Sa",
      "image": "https://dookeela.live/uploads/1664499665.png",
      "url": "https://cdn5555.google-streams.com:9091/v5/1731263221/live/lx-origin/epl-1_720/chunks.m3u8",
      "referer": "https://freetvdd.com",
