--- a/Nexter-PremierLeague.html
+++ b/Nexter-PremierLeague.html
@@ -71,7 +71,7 @@
 
 
 {
-				"name": "Nexter-ลิงค์เสีย(รอตรวจสอบ)",
+				"name": "ลิงค์เสีย(รอตรวจสอบเด้อ)",
 				"image": "https://www.pngfind.com/pngs/m/34-344706_1056-x-1056-7-logo-stop-png-transparent.png",
 				"url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Nexter-%E0%B8%A5%E0%B8%B4%E0%B8%87%E0%B8%84%E0%B9%8C%E0%B9%80%E0%B8%AA%E0%B8%B5%E0%B8%A2(%E0%B8%A3%E0%B8%AD%E0%B8%95%E0%B8%A3%E0%B8%A7%E0%B8%88%E0%B8%AA%E0%B8%AD%E0%B8%9A).html",
 				"info": "Nexter-PremierLeague",
