--- a/Nexter-ลิงค์เสีย(รอตรวจสอบ).html
+++ b/Nexter-ลิงค์เสีย(รอตรวจสอบ).html
@@ -12,13 +12,263 @@
 
 
 {
-     "name": "TruePremierFootball 1ID",
+     "name": "TruePremierFootball 1T",
      "image": "https://dookeela.live/uploads/1664499665.png",
-     "url": "https://playidtv24.vercel.app/stream/now/premier1.m3u8",
+     "url": "https://streaming.livescorethai.net/iptv/epl-1.stream/chunks.m3u8",
      "referer": "https://freetvdd.com",
      "info": "NexterPremierLeague",
      "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
     },
+
+     {
+      "name": "Premier Football 1TH",
+     "image": "https://dookeela.live/uploads/1664499665.png",
+     "url": "https://streaming.livescorethai.net/iptv/bsb-epl1.stream/chunks.m3u8",
+     "referer": "https://livescorethai.net/",
+     "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+    },
+     {
+      "name": "Premier Football 1TTH",
+     "image": "https://dookeela.live/uploads/1664499665.png",
+     "url": "https://streaming.livescorethai.net/iptv/epl-1.stream/chunks.m3u8",
+     "referer": "https://livescorethai.net/",
+     "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+    },
+
+{"name":"True Premier 1 Livescore",
+"image":"https://img2.pic.in.th/pic/pp1550561a5c7a8eca5.png",
+"url":"https://streaming.livescorethai.net/iptv/bsb-epl1.stream/chunks.m3u8",
+"referer": "https://livescorethai.net/",
+"playInNatPlayer":"true"},
+
+{"name":"Premier1-A🇹🇭",
+"image":"https://dookeela.live/uploads/1664499665.png",
+"url":"https://streaming.livescorethai.net/iptv/epl-1.stream/chunks.m3u8",
+"referer": "https://livescorethai.net/",
+"playInNatPlayer":"true"},
+
+    {
+     "name": "Premier Football 2TH",
+     "image": "https://dookeela.live/uploads/1664499673.png",
+     "url": "https://streaming.livescorethai.net/iptv/bsb-epl2.stream/chunks.m3u8",
+     "referer": "https://livescorethai.net/",
+     "info": "NexterPremierLeague",
+    "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+    {
+     "name": "Premier Football 2TTH",
+     "image": "https://dookeela.live/uploads/1664499673.png",
+     "url": "https://streaming.livescorethai.net/iptv/epl-2.stream/chunks.m3u8",
+     "referer": "https://livescorethai.net/",
+     "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+}, 
+
+{"name":"True Premier 2 Livescore",
+"image":"https://img2.pic.in.th/pic/pp2175703f8cdfed6a5.png",
+"url":"https://streaming.livescorethai.net/iptv/bsb-epl2.stream/chunks.m3u8",
+"referer": "https://livescorethai.net/",
+"playInNatPlayer":"true"},
+
+{"name":"Premier2-A🇹🇭",
+"image":"https://dookeela.live/uploads/1664499673.png",
+"url":"https://streaming.livescorethai.net/iptv/bsb-epl2.stream/chunks.m3u8",
+"referer": "https://livescorethai.net/",
+"playInNatPlayer":"true"},
+
+{"name":"Premier2-B🇹🇭",
+"image":"https://dookeela.live/uploads/1664499673.png",
+"url":"https://streaming.livescorethai.net/iptv/epl-2.stream/chunks.m3u8",
+"referer": "https://livescorethai.net/",
+"playInNatPlayer":"true"},
+
+    {
+     "name": "Premier Football 3TH",
+     "image": "https://dookeela.live/uploads/1664499681.png",
+     "url": "https://streaming.livescorethai.net/iptv/epl-3.stream/chunks.m3u8",
+     "referer": "https://livescorethai.net/",
+     "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"    
+ },
+
+{"name":"Premier3-A🇹🇭",
+"image":"https://dookeela.live/uploads/1664499681.png",
+"url":"https://streaming.livescorethai.net/iptv/epl-3.stream/chunks.m3u8",
+"referer": "https://livescorethai.net/",
+"playInNatPlayer":"true"},
+
+{"name":"Premier4-A🇹🇭",
+"image":"https://dookeela.live/uploads/1664499692.png",
+"url":"https://streaming.livescorethai.net/iptv/epl-4.stream/chunks.m3u8",
+"referer": "https://livescorethai.net/",
+"playInNatPlayer":"true"},
+
+    {
+     "name": "Premier Football 5TH",
+     "image": "https://dookeela.live/uploads/1664499700.png",
+     "url": "https://streaming.livescorethai.net/iptv/epl-5.stream/chunks.m3u8",
+     "referer": "https://livescorethai.net/",
+	 "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+    },
+
+{"name": "TRUE PREMIER 5 Livescore",
+"image": "https://img5.pic.in.th/file/secure-sv1/pp5.png",
+"url": "https://streaming.livescorethai.net/iptv/epl-5.stream/chunks.m3u8",
+"referer": "https://freetvdd.com/","userAgent": "ExoPlayerLib/2.8.4"},
+
+{"name":"Premier5-A🇹🇭",
+"image":"https://dookeela.live/uploads/1664499700.png",
+"url":"https://streaming.livescorethai.net/iptv/epl-5.stream/chunks.m3u8",
+"referer": "https://livescorethai.net/",
+"playInNatPlayer":"true"},
+
+{"name":"True Premier 1-A🇹🇭",
+"image":"https://dookeela.live/uploads/1664499665.png",
+"url":"https://streaming.livescorethai.net/iptv/bsb-epl1.stream/chunks.m3u8",
+"referer": "https://livescorethai.net/",
+"playInNatPlayer":"true"},
+
+{"name":"True Premier 1-B🇹🇭",
+"image":"https://dookeela.live/uploads/1664499665.png",
+"url":"https://streaming.livescorethai.net/iptv/epl-1.stream/chunks.m3u8",
+"referer": "https://livescorethai.net/",
+"playInNatPlayer":"true"},
+
+{"name":"True Premier 1-C🇹🇭",
+"image":"https://dookeela.live/uploads/1664499665.png",
+"url":"https://dolive.thaim3u.com/doolive4k-tv/siamsport-1/chunks.m3u8",
+"referer": "https://doolive4k.tv/",
+"playInNatPlayer": "true"},
+
+{"name":"True Premier 1-D🇹🇭",
+"image":"https://dookeela.live/uploads/1664499665.png",
+"url":"https://www.ball24.tv/allchannel/?id=epl1",
+"playInNatPlayer":"true"},
+
+{"name":"True Premier 1-E🇹🇭",
+"image":"https://dookeela.live/uploads/1664499665.png",
+"url":"https://www.livedoomovies.com:4432/02_PremierHD1_720p/chunklist.m3u8",
+"referer": "https://www.madoohd.com/",
+"playInNatPlayer":"true"},
+
+{"name":"True Premier 2-A🇹🇭",
+"image":"https://dookeela.live/uploads/1664499673.png",
+"url":"https://streaming.livescorethai.net/iptv/bsb-epl2.stream/chunks.m3u8",
+"referer": "https://livescorethai.net/",
+"playInNatPlayer":"true"},
+
+{"name":"True Premier 2-B🇹🇭",
+"image":"https://dookeela.live/uploads/1664499673.png",
+"url":"https://streaming.livescorethai.net/iptv/epl-2.stream/chunks.m3u8",
+"referer": "https://livescorethai.net/",
+"playInNatPlayer":"true"},
+
+{"name":"True Premier 2-C🇹🇭",
+"image":"https://dookeela.live/uploads/1664499673.png",
+"url":"https://www.livedoomovies.com:4432/02_PremierHD2_720p/chunklist.m3u8",
+"referer": "https://www.madoohd.com/",
+"playInNatPlayer":"true"},
+
+{"name":"True Premier 2-D🇹🇭",
+"image":"https://dookeela.live/uploads/1664499673.png",
+"url":"https://dolive.thaim3u.com/doolive4k-tv/siamsport-2/chunks.m3u8",
+"referer": "https://doolive4k.tv/",
+"playInNatPlayer": "true"},
+
+{"name":"True Premier 2-E🇹🇭",
+"image":"https://dookeela.live/uploads/1664499673.png",
+"url":"https://www.ball24.tv/allchannel/?id=epl2",
+"playInNatPlayer":"true"},
+
+{"name":"True Premier 3-A🇹🇭",
+"image":"https://dookeela.live/uploads/1664499681.png",
+"url":"https://streaming.livescorethai.net/iptv/epl-3.stream/chunks.m3u8",
+"referer": "https://livescorethai.net/",
+"playInNatPlayer":"true"},
+
+{"name":"True Premier 3-B🇹🇭",
+"image":"https://dookeela.live/uploads/1664499681.png",
+"url":"https://dolive.thaim3u.com/doolive4k-tv/siamsport-3/chunks.m3u8",
+"referer": "https://doolive4k.tv/",
+"playInNatPlayer": "true"},
+
+{"name":"True Premier 4-A🇹🇭",
+"image":"https://dookeela.live/uploads/1664499692.png",
+"url":"https://streaming.livescorethai.net/iptv/epl-4.stream/chunks.m3u8",
+"referer": "https://livescorethai.net/",
+"playInNatPlayer":"true"},
+
+{"name":"True Premier 4-B🇹🇭",
+"image":"https://dookeela.live/uploads/1664499692.png",
+"url":"https://dolive.thaim3u.com/doolive4k-tv/siamsport-4/chunks.m3u8",
+"referer": "https://doolive4k.tv/",
+"playInNatPlayer": "true"},
+
+{"name":"True Premier 5-A🇹🇭",
+"image":"https://dookeela.live/uploads/1664499700.png",
+"url":"https://streaming.livescorethai.net/iptv/epl-5.stream/chunks.m3u8",
+"referer": "https://livescorethai.net/",
+"playInNatPlayer":"true"},
+
+{"name":"True Premier 5-B🇹🇭",
+"image":"https://dookeela.live/uploads/1664499700.png",
+"url":"https://dolive.thaim3u.com/doolive4k-tv/siamsport-5/chunks.m3u8",
+"referer": "https://doolive4k.tv/",
+"playInNatPlayer": "true"},
+
+
+{ 
+"name"		: "True Premier Football HD 1", 
+"image"		: "https://dookeela.live/uploads/1664499665.png", 
+"url"		: "https://streaming.livescorethai.net/iptv/epl-1.stream/chunks.m3u8",
+"info"		: "",
+"referer"	: "https://freetvdd.com/"
+}, 
+
+{ 
+"name"		: "True Premier Football HD 2", 
+"image"		: "https://dookeela.live/uploads/1664499673.png", 
+"url"		: "https://streaming.livescorethai.net/iptv/epl-2.stream/chunks.m3u8",
+"info"		: "",
+"referer"	: "https://freetvdd.com/"
+}, 
+
+{ 
+"name"		: "True Premier Football HD 3", 
+"image"		: "https://dookeela.live/uploads/1664499681.png", 
+"url"		: "https://streaming.livescorethai.net/iptv/epl-3.stream/chunks.m3u8",
+"info"		: "",
+"referer"	: "https://freetvdd.com/"
+}, 
+
+{ 
+"name"		: "True Premier Football HD 4", 
+"image"		: "https://dookeela.live/uploads/1664499692.png", 
+"url"		: "https://streaming.livescorethai.net/iptv/epl-4.stream/chunks.m3u8",
+"info"		: "",
+"referer"	: "https://freetvdd.com/"
+}, 
+
+{ 
+"name"		: "True Premier Football HD 5", 
+"image"		: "https://dookeela.live/uploads/1664499700.png", 
+"url"		: "https://streaming.livescorethai.net/iptv/epl-5.stream/chunks.m3u8",
+"info"		: "",
+"referer"	: "https://freetvdd.com/"
+}, 
+
+
+
 
 
 
