--- a/NexterPremierLeague1.html
+++ b/NexterPremierLeague1.html
@@ -37,8 +37,31 @@
      "info": "NexterPremierLeague",
      "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
     },
-
-			{
+{
+     "name": "TruePremierFootball 1™",
+     "image": "https://dookeela.live/uploads/1664499665.png",
+     "url": "https://cdn2.googlecdnforstreaming.live/vvipscore/epl1_sd/chunks.m3u8",
+     "referer": "https://freetvdd.com",
+     "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
+    },
+{
+     "name": "TruePremierFootball 1 (4K)",
+     "image": "https://dookeela.live/uploads/1664499665.png",
+     "url": "https://cdn1.googlecdn.live/4k/epl1_sd/playlist.m3u8",
+     "referer": "https://freetvdd.com",
+     "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
+    },
+{
+     "name": "TruePremierFootball 1(live4k)",
+     "image": "https://dookeela.live/uploads/1664499665.png",
+     "url": "https://oral.thaim3u.com/doolive4k-tv/siamsport-1/chunks.m3u8",
+     "referer": "https://freetvdd.com",
+     "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
+    },
+{
      "name": "True Premier Football 1",
      "image": "https://dookeela.live/uploads/1664499665.png",
      "url": "https://dookeela.live/live-tv/epl1_sd",
@@ -175,6 +198,23 @@ url:"https://www.andaman888th.com/%E0%B8%94%E0%B8%B9%E0%B8%9A%E0%B8%AD%E0%B8%A5%
      "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
     },
 
+{
+     "name": "TruePremierFootball 2 ™",
+     "image": "https://dookeela.live/uploads/1664499673.png",
+     "url": "https://cdn2.googlecdnforstreaming.live/vvipscore/epl2/chunks.m3u8",
+     "referer": "https://freetvdd.com",
+     "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
+    },
+{
+     "name": "TruePremierFootball 2 (live4k)",
+     "image": "https://dookeela.live/uploads/1664499673.png",
+     "url": "https://cdn2.googlecdnforstreaming.live/vvipscore/epl2/chunks.m3u8",
+     "referer": "https://freetvdd.com",
+     "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
+    },
+
     {
      "name": "True Premier Football 2",
      "image": "https://dookeela.live/uploads/1664499673.png",
@@ -305,6 +345,22 @@ url:"https://www.andaman888th.com/%E0%B8%94%E0%B8%B9%E0%B8%9A%E0%B8%AD%E0%B8%A5%
      "info": "NexterPremierLeague",
      "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
     },
+{
+     "name": "TruePremierFootball 3™",
+     "image": "https://dookeela.live/uploads/1664499681.png",
+     "url": "https://cdn2.googlecdnforstreaming.live/vvipscore/epl3/chunks.m3u8",
+     "referer": "https://freetvdd.com",
+     "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
+    },
+{
+     "name": "TruePremierFootball 3(live4k)",
+     "image": "https://dookeela.live/uploads/1664499681.png",
+     "url": "https://oral.thaim3u.com/doolive4k-tv/siamsport-3/chunks.m3u8",
+     "referer": "https://freetvdd.com",
+     "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
+    },
     {
      "name": "True Premier Football 3",
      "image": "https://dookeela.live/uploads/1664499681.png",
@@ -403,6 +459,22 @@ url:"https://www.andaman888th.com/%E0%B8%94%E0%B8%B9%E0%B8%9A%E0%B8%AD%E0%B8%A5%
      "info": "NexterPremierLeague",
      "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
     },
+{
+     "name": "TruePremierFootball 4™",
+     "image": "https://dookeela.live/uploads/1664499692.png",
+     "url": "https://cdn2.googlecdnforstreaming.live/vvipscore/epl4/chunks.m3u8",
+     "referer": "https://freetvdd.com",
+     "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
+    },
+{
+     "name": "TruePremierFootball 4(live4k)",
+     "image": "https://dookeela.live/uploads/1664499692.png",
+     "url": "https://oral.thaim3u.com/doolive4k-tv/siamsport-4/chunks.m3u8",
+     "referer": "https://freetvdd.com",
+     "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
+    },
     {
      "name": "True Premier Football 4",
      "image": "https://dookeela.live/uploads/1664499692.png",
@@ -472,6 +544,22 @@ url:"https://www.andaman888th.com/%E0%B8%94%E0%B8%B9%E0%B8%9A%E0%B8%AD%E0%B8%A5%
      "name": "TruePremierFootball 5BSL",
      "image": "https://dookeela.live/uploads/1664499700.png",
      "url": "https://ballsodlive.com/tv-online/ch376/",
+     "referer": "https://freetvdd.com",
+     "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
+    },
+{
+     "name": "TruePremierFootball 5™",
+     "image": "https://dookeela.live/uploads/1664499700.png",
+     "url": "https://cdn2.googlecdnforstreaming.live/vvipscore/epl5/chunks.m3u8",
+     "referer": "https://freetvdd.com",
+     "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
+    },
+{
+     "name": "TruePremierFootball 5(live4k)",
+     "image": "https://dookeela.live/uploads/1664499700.png",
+     "url": "https://oral.thaim3u.com/doolive4k-tv/siamsport-5/chunks.m3u8",
      "referer": "https://freetvdd.com",
      "info": "NexterPremierLeague",
      "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
