--- a/NexterPremierLeague1.html
+++ b/NexterPremierLeague1.html
@@ -17,7 +17,8 @@
      "url": "https://playidtv24.vercel.app/stream/now/premier1.m3u8",
      "referer": "https://freetvdd.com",
      "info": "NexterPremierLeague",
-     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
+     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140",
+     "playInNatPlayer": "true"
     },
 
 {
@@ -26,7 +27,8 @@
      "url": "https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=38&tv=TruePremierFootball1",
      "referer": "https://freetvdd.com",
      "info": "NexterPremierLeague",
-     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
+     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140",
+     "playInNatPlayer": "true"
     },
 
 {
@@ -35,15 +37,17 @@
      "url": "https://ballsodlive.com/tv-online/ch373/",
      "referer": "https://freetvdd.com",
      "info": "NexterPremierLeague",
-     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
+     "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140",
+     "playInNatPlayer": "true"
     },
 {
      "name": "TruePremierFootball 1™",
      "image": "https://dookeela.live/uploads/1664499665.png",
      "url": "https://cdn2.googlecdnforstreaming.live/vvipscore/epl1_sd/chunks.m3u8",
-     "referer": "https://freetvdd.com",
      "info": "NexterPremierLeague",
-     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
+     "referer": "https://vvipscore.co/",
+     "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140",
+     "playInNatPlayer": "true"
     },
 {
      "name": "TruePremierFootball 1 (4K)",
@@ -51,7 +55,8 @@
      "url": "https://cdn1.googlecdn.live/4k/epl1_sd/playlist.m3u8",
      "referer": "https://freetvdd.com",
      "info": "NexterPremierLeague",
-     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
+     "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140",
+     "playInNatPlayer": "true" 
     },
 {
      "name": "TruePremierFootball 1(live4k)",
@@ -59,7 +64,8 @@
      "url": "https://oral.thaim3u.com/doolive4k-tv/siamsport-1/chunks.m3u8",
      "referer": "https://freetvdd.com",
      "info": "NexterPremierLeague",
-     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
+     "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140",
+     "playInNatPlayer": "true" 
     },
 {
      "name": "True Premier Football 1",
@@ -178,7 +184,8 @@ url:"https://www.andaman888th.com/%E0%B8%94%E0%B8%B9%E0%B8%9A%E0%B8%AD%E0%B8%A5%
      "url": "https://playidtv24.vercel.app/stream/now/premier2.m3u8",
      "referer": "https://freetvdd.com",
      "info": "NexterPremierLeague",
-     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
+     "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140",
+     "playInNatPlayer": "true" 
     },
 {
      "name": "TruePremierFootball 2FHD",
@@ -186,7 +193,8 @@ url:"https://www.andaman888th.com/%E0%B8%94%E0%B8%B9%E0%B8%9A%E0%B8%AD%E0%B8%A5%
      "url": "https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=39&tv=TruePremierFootball2",
      "referer": "https://freetvdd.com",
      "info": "NexterPremierLeague",
-     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
+     "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140",
+     "playInNatPlayer": "true" 
     },
 
 {
@@ -195,7 +203,8 @@ url:"https://www.andaman888th.com/%E0%B8%94%E0%B8%B9%E0%B8%9A%E0%B8%AD%E0%B8%A5%
      "url": "https://ballsodlive.com/tv-online/ch374/",
      "referer": "https://freetvdd.com",
      "info": "NexterPremierLeague",
-     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
+     "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140",
+     "playInNatPlayer": "true" 
     },
 
 {
@@ -204,7 +213,8 @@ url:"https://www.andaman888th.com/%E0%B8%94%E0%B8%B9%E0%B8%9A%E0%B8%AD%E0%B8%A5%
      "url": "https://cdn2.googlecdnforstreaming.live/vvipscore/epl2/chunks.m3u8",
      "referer": "https://freetvdd.com",
      "info": "NexterPremierLeague",
-     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
+     "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140",
+     "playInNatPlayer": "true" 
     },
 {
      "name": "TruePremierFootball 2 (live4k)",
@@ -212,7 +222,8 @@ url:"https://www.andaman888th.com/%E0%B8%94%E0%B8%B9%E0%B8%9A%E0%B8%AD%E0%B8%A5%
      "url": "https://cdn2.googlecdnforstreaming.live/vvipscore/epl2/chunks.m3u8",
      "referer": "https://freetvdd.com",
      "info": "NexterPremierLeague",
-     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
+     "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140",
+     "playInNatPlayer": "true" 
     },
 
     {
@@ -221,7 +232,8 @@ url:"https://www.andaman888th.com/%E0%B8%94%E0%B8%B9%E0%B8%9A%E0%B8%AD%E0%B8%A5%
      "url": "https://dookeela.live/live-tv/epl2",
      "referer": "https://dookeela.live/",
      "info": "NexterPremierLeague",
-     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true"    
+     "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140",
+     "playInNatPlayer": "true"    
 },
 
 
