--- a/NexterPremierLeague1.html
+++ b/NexterPremierLeague1.html
@@ -37,7 +37,7 @@
      "url": "https://ballsodlive.com/tv-online/ch373/",
      "referer": "https://freetvdd.com",
      "info": "NexterPremierLeague",
-     "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140",
+     "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36",
      "playInNatPlayer": "true"
     },
 {
@@ -46,7 +46,7 @@
      "url": "https://cdn2.googlecdnforstreaming.live/vvipscore/epl1_sd/chunks.m3u8",
      "info": "NexterPremierLeague",
      "referer": "https://vvipscore.co/",
-     "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140",
+     "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36",
      "playInNatPlayer": "true"
     },
 {
@@ -55,8 +55,8 @@
      "url": "https://cdn1.googlecdn.live/4k/epl1_sd/playlist.m3u8",
      "referer": "https://freetvdd.com",
      "info": "NexterPremierLeague",
-     "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140",
-     "playInNatPlayer": "true" 
+     "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36",
+     "playInNatPlayer": "true"
     },
 {
      "name": "TruePremierFootball 1(live4k)",
@@ -64,7 +64,7 @@
      "url": "https://oral.thaim3u.com/doolive4k-tv/siamsport-1/chunks.m3u8",
      "referer": "https://freetvdd.com",
      "info": "NexterPremierLeague",
-     "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140",
+     "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36",
      "playInNatPlayer": "true" 
     },
 {
@@ -203,8 +203,8 @@ url:"https://www.andaman888th.com/%E0%B8%94%E0%B8%B9%E0%B8%9A%E0%B8%AD%E0%B8%A5%
      "url": "https://ballsodlive.com/tv-online/ch374/",
      "referer": "https://freetvdd.com",
      "info": "NexterPremierLeague",
-     "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140",
-     "playInNatPlayer": "true" 
+     "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36",
+     "playInNatPlayer": "true"
     },
 
 {
@@ -213,8 +213,8 @@ url:"https://www.andaman888th.com/%E0%B8%94%E0%B8%B9%E0%B8%9A%E0%B8%AD%E0%B8%A5%
      "url": "https://cdn2.googlecdnforstreaming.live/vvipscore/epl2/chunks.m3u8",
      "referer": "https://freetvdd.com",
      "info": "NexterPremierLeague",
-     "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140",
-     "playInNatPlayer": "true" 
+     "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36",
+     "playInNatPlayer": "true"
     },
 {
      "name": "TruePremierFootball 2 (live4k)",
@@ -222,8 +222,8 @@ url:"https://www.andaman888th.com/%E0%B8%94%E0%B8%B9%E0%B8%9A%E0%B8%AD%E0%B8%A5%
      "url": "https://cdn2.googlecdnforstreaming.live/vvipscore/epl2/chunks.m3u8",
      "referer": "https://freetvdd.com",
      "info": "NexterPremierLeague",
-     "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140",
-     "playInNatPlayer": "true" 
+     "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36",
+     "playInNatPlayer": "true"
     },
 
     {
@@ -355,7 +355,8 @@ url:"https://www.andaman888th.com/%E0%B8%94%E0%B8%B9%E0%B8%9A%E0%B8%AD%E0%B8%A5%
      "url": "https://ballsodlive.com/tv-online/ch375/",
      "referer": "https://freetvdd.com",
      "info": "NexterPremierLeague",
-     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
+     "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36",
+     "playInNatPlayer": "true" 
     },
 {
      "name": "TruePremierFootball 3™",
@@ -363,7 +364,8 @@ url:"https://www.andaman888th.com/%E0%B8%94%E0%B8%B9%E0%B8%9A%E0%B8%AD%E0%B8%A5%
      "url": "https://cdn2.googlecdnforstreaming.live/vvipscore/epl3/chunks.m3u8",
      "referer": "https://freetvdd.com",
      "info": "NexterPremierLeague",
-     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
+     "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36",
+     "playInNatPlayer": "true" 
     },
 {
      "name": "TruePremierFootball 3(live4k)",
@@ -371,7 +373,8 @@ url:"https://www.andaman888th.com/%E0%B8%94%E0%B8%B9%E0%B8%9A%E0%B8%AD%E0%B8%A5%
      "url": "https://oral.thaim3u.com/doolive4k-tv/siamsport-3/chunks.m3u8",
      "referer": "https://freetvdd.com",
      "info": "NexterPremierLeague",
-     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
+     "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36",
+     "playInNatPlayer": "true" 
     },
     {
      "name": "True Premier Football 3",
@@ -469,7 +472,8 @@ url:"https://www.andaman888th.com/%E0%B8%94%E0%B8%B9%E0%B8%9A%E0%B8%AD%E0%B8%A5%
      "url": "https://ballsodlive.com/tv-online/ch376/",
      "referer": "https://freetvdd.com",
      "info": "NexterPremierLeague",
-     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
+     "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36",
+     "playInNatPlayer": "true" 
     },
 {
      "name": "TruePremierFootball 4™",
@@ -477,7 +481,8 @@ url:"https://www.andaman888th.com/%E0%B8%94%E0%B8%B9%E0%B8%9A%E0%B8%AD%E0%B8%A5%
      "url": "https://cdn2.googlecdnforstreaming.live/vvipscore/epl4/chunks.m3u8",
      "referer": "https://freetvdd.com",
      "info": "NexterPremierLeague",
-     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
+     "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36",
+     "playInNatPlayer": "true" 
     },
 {
      "name": "TruePremierFootball 4(live4k)",
@@ -485,7 +490,8 @@ url:"https://www.andaman888th.com/%E0%B8%94%E0%B8%B9%E0%B8%9A%E0%B8%AD%E0%B8%A5%
      "url": "https://oral.thaim3u.com/doolive4k-tv/siamsport-4/chunks.m3u8",
      "referer": "https://freetvdd.com",
      "info": "NexterPremierLeague",
-     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
+     "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36",
+     "playInNatPlayer": "true" 
     },
     {
      "name": "True Premier Football 4",
@@ -558,7 +564,8 @@ url:"https://www.andaman888th.com/%E0%B8%94%E0%B8%B9%E0%B8%9A%E0%B8%AD%E0%B8%A5%
      "url": "https://ballsodlive.com/tv-online/ch376/",
      "referer": "https://freetvdd.com",
      "info": "NexterPremierLeague",
-     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
+     "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36",
+     "playInNatPlayer": "true" 
     },
 {
      "name": "TruePremierFootball 5™",
@@ -566,7 +573,8 @@ url:"https://www.andaman888th.com/%E0%B8%94%E0%B8%B9%E0%B8%9A%E0%B8%AD%E0%B8%A5%
      "url": "https://cdn2.googlecdnforstreaming.live/vvipscore/epl5/chunks.m3u8",
      "referer": "https://freetvdd.com",
      "info": "NexterPremierLeague",
-     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
+     "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36",
+     "playInNatPlayer": "true" 
     },
 {
      "name": "TruePremierFootball 5(live4k)",
@@ -574,7 +582,8 @@ url:"https://www.andaman888th.com/%E0%B8%94%E0%B8%B9%E0%B8%9A%E0%B8%AD%E0%B8%A5%
      "url": "https://oral.thaim3u.com/doolive4k-tv/siamsport-5/chunks.m3u8",
      "referer": "https://freetvdd.com",
      "info": "NexterPremierLeague",
-     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
+     "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36",
+     "playInNatPlayer": "true" 
     },
 
     {
