--- a/NexterPremierLeague1.html
+++ b/NexterPremierLeague1.html
@@ -40,33 +40,40 @@
      "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36",
      "playInNatPlayer": "true"
     },
-{
-     "name": "TruePremierFootball 1™",
-     "image": "https://dookeela.live/uploads/1664499665.png",
-     "url": "https://cdn2.googlecdnforstreaming.live/vvipscore/epl1_sd/chunks.m3u8",
-     "info": "NexterPremierLeague",
-     "referer": "https://vvipscore.co/",
-     "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36",
-     "playInNatPlayer": "true"
-    },
-{
-     "name": "TruePremierFootball 1 (4K)",
-     "image": "https://dookeela.live/uploads/1664499665.png",
-     "url": "https://cdn1.googlecdn.live/4k/epl1_sd/playlist.m3u8",
-     "referer": "https://freetvdd.com",
-     "info": "NexterPremierLeague",
-     "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36",
-     "playInNatPlayer": "true"
-    },
-{
-     "name": "TruePremierFootball 1(live4k)",
-     "image": "https://dookeela.live/uploads/1664499665.png",
-     "url": "https://oral.thaim3u.com/doolive4k-tv/siamsport-1/chunks.m3u8",
-     "referer": "https://freetvdd.com",
-     "info": "NexterPremierLeague",
-     "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36",
-     "playInNatPlayer": "true" 
-    },
+		{
+		"name": "PREMIER HD 1 ™ ",
+		"image": "https://www.dropbox.com/scl/fi/m39ntjxh0s3b4vilskmfc/epl1.png?rlkey=o0nbk82n3bpqil97lg8vhp6k2&dl=1",
+		"url": "https://cdn2.googlecdnforstreaming.live/vvipscore/epl1_sd/chunks.m3u8",
+		"referer": "https://vvipscore.co/",
+		"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36",
+		"playInNatPlayer": "true"
+		},
+	
+		{
+		"name": "PREMIER HD 1 ™(4K) ",
+		"image": "https://www.dropbox.com/scl/fi/m39ntjxh0s3b4vilskmfc/epl1.png?rlkey=o0nbk82n3bpqil97lg8vhp6k2&dl=1",
+		"url": "https://cdn1.googlecdn.live/4k/epl1_sd/playlist.m3u8",
+		"referer": "https://dookeela.live/",
+		"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36",
+		"playInNatPlayer": "true"
+		},
+
+		{
+		"name":"True Premier 1 (Doolive4k)",
+		"image":"https://www.dropbox.com/scl/fi/m39ntjxh0s3b4vilskmfc/epl1.png?rlkey=o0nbk82n3bpqil97lg8vhp6k2&dl=1",
+		"url":"https://oral.thaim3u.com/doolive4k-tv/siamsport-1/chunks.m3u8",
+		"referer": "https://doolive4k.tv/",
+		"playInNatPlayer": "true"
+		},	
+
+		{
+		"name":"True Premier 1 (Doolive4k)",
+		"image":"https://www.dropbox.com/scl/fi/m39ntjxh0s3b4vilskmfc/epl1.png?rlkey=o0nbk82n3bpqil97lg8vhp6k2&dl=1",
+		"url":"https://oral.thaim3u.com/doolive4k-tv/siamsport-1/chunks.m3u8",
+		"referer": "https://doolive4k.tv/",
+		"playInNatPlayer": "true"
+		},	
+
 {
      "name": "True Premier Football 1",
      "image": "https://dookeela.live/uploads/1664499665.png",
@@ -208,23 +215,22 @@ url:"https://www.andaman888th.com/%E0%B8%94%E0%B8%B9%E0%B8%9A%E0%B8%AD%E0%B8%A5%
     },
 
 {
-     "name": "TruePremierFootball 2 ™",
-     "image": "https://dookeela.live/uploads/1664499673.png",
-     "url": "https://cdn2.googlecdnforstreaming.live/vvipscore/epl2/chunks.m3u8",
-     "referer": "https://freetvdd.com",
-     "info": "NexterPremierLeague",
-     "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36",
-     "playInNatPlayer": "true"
-    },
-{
-     "name": "TruePremierFootball 2 (live4k)",
-     "image": "https://dookeela.live/uploads/1664499673.png",
-     "url": "https://cdn2.googlecdnforstreaming.live/vvipscore/epl2/chunks.m3u8",
-     "referer": "https://freetvdd.com",
-     "info": "NexterPremierLeague",
-     "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36",
-     "playInNatPlayer": "true"
-    },
+		"name": "PREMIER HD 2 ™ ",
+		"image": "https://www.dropbox.com/scl/fi/7ka1ta3gldxjyhy7mxh8a/epl2.png?rlkey=w1u2auevfdxr9y1utwjfighil&dl=1",
+		"url": "https://cdn2.googlecdnforstreaming.live/vvipscore/epl2/chunks.m3u8",
+		"referer": "https://vvipscore.co/",
+		"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36",
+		"playInNatPlayer": "true"
+		},
+
+		{
+		"name":"True Premier 2 (Doolive4k)",
+		"image": "https://www.dropbox.com/scl/fi/7ka1ta3gldxjyhy7mxh8a/epl2.png?rlkey=w1u2auevfdxr9y1utwjfighil&dl=1",
+		"url":"https://oral.thaim3u.com/doolive4k-tv/siamsport-2/chunks.m3u8",
+		"referer": "https://doolive4k.tv/",
+		"playInNatPlayer": "true"
+		},
+
 
     {
      "name": "True Premier Football 2",
@@ -358,24 +364,24 @@ url:"https://www.andaman888th.com/%E0%B8%94%E0%B8%B9%E0%B8%9A%E0%B8%AD%E0%B8%A5%
      "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36",
      "playInNatPlayer": "true" 
     },
+
 {
-     "name": "TruePremierFootball 3™",
-     "image": "https://dookeela.live/uploads/1664499681.png",
-     "url": "https://cdn2.googlecdnforstreaming.live/vvipscore/epl3/chunks.m3u8",
-     "referer": "https://freetvdd.com",
-     "info": "NexterPremierLeague",
-     "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36",
-     "playInNatPlayer": "true" 
-    },
-{
-     "name": "TruePremierFootball 3(live4k)",
-     "image": "https://dookeela.live/uploads/1664499681.png",
-     "url": "https://oral.thaim3u.com/doolive4k-tv/siamsport-3/chunks.m3u8",
-     "referer": "https://freetvdd.com",
-     "info": "NexterPremierLeague",
-     "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36",
-     "playInNatPlayer": "true" 
-    },
+		"name": "PREMIER HD 3 ™ ",
+		"image": "https://www.dropbox.com/scl/fi/vf9ip98bvwt8xlzauvi55/epl3.png?rlkey=xtqwebs1zrftkped4dykbmsrp&dl=1",
+		"url": "https://cdn2.googlecdnforstreaming.live/vvipscore/epl3/chunks.m3u8",
+		"referer": "https://vvipscore.co/",
+		"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36",
+		"playInNatPlayer": "true"
+		},
+
+		{
+		"name":"True Premier 3 (Doolive4k)",
+		"image": "https://www.dropbox.com/scl/fi/vf9ip98bvwt8xlzauvi55/epl3.png?rlkey=xtqwebs1zrftkped4dykbmsrp&dl=1",
+		"url":"https://oral.thaim3u.com/doolive4k-tv/siamsport-3/chunks.m3u8",
+		"referer": "https://doolive4k.tv/",
+		"playInNatPlayer": "true"
+		},
+
     {
      "name": "True Premier Football 3",
      "image": "https://dookeela.live/uploads/1664499681.png",
@@ -475,24 +481,24 @@ url:"https://www.andaman888th.com/%E0%B8%94%E0%B8%B9%E0%B8%9A%E0%B8%AD%E0%B8%A5%
      "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36",
      "playInNatPlayer": "true" 
     },
+
 {
-     "name": "TruePremierFootball 4™",
-     "image": "https://dookeela.live/uploads/1664499692.png",
-     "url": "https://cdn2.googlecdnforstreaming.live/vvipscore/epl4/chunks.m3u8",
-     "referer": "https://freetvdd.com",
-     "info": "NexterPremierLeague",
-     "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36",
-     "playInNatPlayer": "true" 
-    },
-{
-     "name": "TruePremierFootball 4(live4k)",
-     "image": "https://dookeela.live/uploads/1664499692.png",
-     "url": "https://oral.thaim3u.com/doolive4k-tv/siamsport-4/chunks.m3u8",
-     "referer": "https://freetvdd.com",
-     "info": "NexterPremierLeague",
-     "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36",
-     "playInNatPlayer": "true" 
-    },
+		"name": "PREMIER HD 4 ™ ",
+		"image": "https://www.dropbox.com/scl/fi/bs2nadsf2chbzch8wch2z/epl4.png?rlkey=sgt77cowv1qtthyr4fbw15jlw&dl=1",
+		"url": "https://cdn2.googlecdnforstreaming.live/vvipscore/epl4/chunks.m3u8",
+		"referer": "https://vvipscore.co/",
+		"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36",
+		"playInNatPlayer": "true"
+		},
+
+		{
+		"name":"True Premier 4 (Doolive4k)",
+		"image": "https://www.dropbox.com/scl/fi/bs2nadsf2chbzch8wch2z/epl4.png?rlkey=sgt77cowv1qtthyr4fbw15jlw&dl=1",
+		"url":"https://oral.thaim3u.com/doolive4k-tv/siamsport-4/chunks.m3u8",
+		"referer": "https://doolive4k.tv/",
+		"playInNatPlayer": "true"
+		},
+
     {
      "name": "True Premier Football 4",
      "image": "https://dookeela.live/uploads/1664499692.png",
@@ -567,24 +573,23 @@ url:"https://www.andaman888th.com/%E0%B8%94%E0%B8%B9%E0%B8%9A%E0%B8%AD%E0%B8%A5%
      "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36",
      "playInNatPlayer": "true" 
     },
+
 {
-     "name": "TruePremierFootball 5™",
-     "image": "https://dookeela.live/uploads/1664499700.png",
-     "url": "https://cdn2.googlecdnforstreaming.live/vvipscore/epl5/chunks.m3u8",
-     "referer": "https://freetvdd.com",
-     "info": "NexterPremierLeague",
-     "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36",
-     "playInNatPlayer": "true" 
-    },
-{
-     "name": "TruePremierFootball 5(live4k)",
-     "image": "https://dookeela.live/uploads/1664499700.png",
-     "url": "https://oral.thaim3u.com/doolive4k-tv/siamsport-5/chunks.m3u8",
-     "referer": "https://freetvdd.com",
-     "info": "NexterPremierLeague",
-     "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36",
-     "playInNatPlayer": "true" 
-    },
+		"name": "PREMIER HD 5 ™ ",
+		"image": "https://www.dropbox.com/scl/fi/m26i5jt3f5hefy3kd2yzg/epl5.png?rlkey=l1176dpa8oe9tpmtwpzzjh19x&dl=1",
+		"url": "https://cdn2.googlecdnforstreaming.live/vvipscore/epl5/chunks.m3u8",
+		"referer": "https://vvipscore.co/",
+		"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/105.0.0.0 Safari/537.36",
+		"playInNatPlayer": "true"
+		},
+
+		{
+		"name":"True Premier 5 (Doolive4k)",
+		"image": "https://www.dropbox.com/scl/fi/m26i5jt3f5hefy3kd2yzg/epl5.png?rlkey=l1176dpa8oe9tpmtwpzzjh19x&dl=1",
+		"url":"https://oral.thaim3u.com/doolive4k-tv/siamsport-5/chunks.m3u8",
+		"referer": "https://doolive4k.tv/",
+		"playInNatPlayer": "true"
+		},
 
     {
      "name": "True Premier Football 5",
