--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -7,6 +7,14 @@
 "stations" : [
 
 
+{  
+name:"เอ-ทีม หน่วยพิฆาตเดนตาย",
+image:"https://img.inwiptv.net/postor/20170529175529eMwotYpkcE42lGlaoCpPFaolvst.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/The-A-Team-2010/The-A-Team-2010-TH-1080p-Extended.mp4/playlist.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+}, 
 
 
 {  
