--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -48,6 +48,50 @@ url:"https://m1free.inwstream.com:1936/movie2/ninja_2009/ninja_2009_th_1080p_fw.
 },
 
 
+
+ {  
+name:"ผจญภัยล่าขุมทรัพย์สุดขอบโลก (2022)",
+image:"https://img.inwiptv.net/postor/20220425200320uncharted-61e143a096fee.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Uncharted_2022/Uncharted_2022_th_5_1_1080p.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},   
+
+
+
+ {  
+name:"ระห่ำพลิกนรก (2019)",
+image:"https://img.inwiptv.net/postor/20201228215333cmC7bJZ5sCzx9ZsrlXOrYJfYtLc.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/The_Courier_2019/The_Courier_2019_TH_1080p.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},       
+
+
+
+ {  
+name:"หมายหัวล่า...ฮีโร่แค้นระห่ำ",
+image:"https://img.inwiptv.net/postor/20220512101310images.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Hero_Wanted_2008/Hero_Wanted_2008_TH_1080p.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},     
+
+
+
+ {  
+name:"วาซาบิ ตำรวจดุระห่ำโตเกียว",
+image:"https://img.inwiptv.net/postor/20220518104430wasabi-5d649126348c3.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Wasabi_2001/Wasabi_2001_TH_1080p.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},       
+
+
     
 {  
 name:"ยุทธการยึดด่วนนรก 2",
