--- a/Nexter-PremierLeague.html
+++ b/Nexter-PremierLeague.html
@@ -61,9 +61,9 @@
 
 
 {
-				"name": "NexterOldMan-AllSports",
-				"image": "https://cdn.pixabay.com/photo/2024/02/02/04/20/men-8547227_1280.png",
-				"url": "https://wandering-oldman.github.io/sport/sport.html",
+				"name": "Nexter-Gojek-AllSport",
+				"image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/GJK-Sport.png",
+				"url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/GJK/GJK-Sport.html",
 				"info": "Nexter-PremierLeague",
 				"import": false
 },
