--- a/Nexter-PremierLeague.html
+++ b/Nexter-PremierLeague.html
@@ -62,7 +62,7 @@
 
 {
 				"name": "Nexter-Gojek-AllSport",
-				"image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/GJK-Sport.png",
+				"image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/trueidsport.jpg",
 				"url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/GJK/GJK-Sport.html",
 				"info": "Nexter-PremierLeague",
 				"import": false
