--- a/Nexter-PremierLeague.html
+++ b/Nexter-PremierLeague.html
@@ -61,7 +61,7 @@
 
 
 {
-				"name": "Nexter-Gojek-AllSport",
+				"name": "Nexter-Gojek-AllSports",
 				"image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/trueidsport.jpg",
 				"url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/GJK/GJK-Sport.html",
 				"info": "Nexter-PremierLeague",
