--- a/Nexter-PremierLeague.html
+++ b/Nexter-PremierLeague.html
@@ -61,8 +61,8 @@
 
 
 {
-				"name": "Nexter-Gojek-AllSports",
-				"image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/trueidsport.jpg",
+				"name": "Nexter-Gojek-AllSportt",
+				"image": "https://cms.dmpcdn.com/livetv/2024/03/14/29e0bc80-e1d2-11ee-8422-eff39415c030_webp_original.webp",
 				"url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/GJK/GJK-Sport.html",
 				"info": "Nexter-PremierLeague",
 				"import": false
