--- a/Nexter-PremierLeague.html
+++ b/Nexter-PremierLeague.html
@@ -62,7 +62,7 @@
 
 {
 				"name": "Nexter-Gojek-AllSportt",
-				"image": "https://cms.dmpcdn.com/livetv/2024/03/14/29e0bc80-e1d2-11ee-8422-eff39415c030_webp_original.webp",
+				"image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/trueidplus.jpg",
 				"url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/GJK/GJK-Sport.html",
 				"info": "Nexter-PremierLeague",
 				"import": false
