--- a/Nexter-PremierLeague.html
+++ b/Nexter-PremierLeague.html
@@ -62,7 +62,7 @@
 
 {
 				"name": "Nexter-Gojek-AllSportt",
-				"image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/trueidplus.jpg",
+				"image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/epl-trueid.png",
 				"url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/GJK/GJK-Sport.html",
 				"info": "Nexter-PremierLeague",
 				"import": false
