--- a/NexterPremierLeague1.html
+++ b/NexterPremierLeague1.html
@@ -37,6 +37,7 @@
 		"referer": "https://ballsodlive.com",
 		"playInNatPlayer": "true"
 		},
+
 		{
 		"name": "TruePremierFootball 1BSL",
 		"image": "https://dookeela.live/uploads/1664499665.png",
@@ -44,6 +45,7 @@
 		"referer": "https://ballsodlive.com",
 		"playInNatPlayer": "true"
 		},
+
 		{
 		"name": "PREMIER HD 1 ™ ",
 		"image": "https://dookeela.live/uploads/1664499665.png",
@@ -204,14 +206,13 @@ url:"https://www.andaman888th.com/%E0%B8%94%E0%B8%B9%E0%B8%9A%E0%B8%AD%E0%B8%A5%
 		"name": "TruePremierFootball 2FW4",
 		"image": "https://dookeela.live/uploads/1664499673.png",
 		"url": "https://fw4free.inwstream.com/fw4free/ch2.stream/chunklist.m3u8",
-		"referer": "https://ballsodlive.com",
 		"playInNatPlayer": "true"
 		},
+
 		{
 		"name": "TruePremierFootball 2BSL",
 		"image": "https://dookeela.live/uploads/1664499673.png",
 		"url": "https://ballsodlive.com/tv-online/ch374/",
-		"referer": "https://ballsodlive.com",
 		"playInNatPlayer": "true"
 		},
 
@@ -364,6 +365,7 @@ url:"https://www.andaman888th.com/%E0%B8%94%E0%B8%B9%E0%B8%9A%E0%B8%AD%E0%B8%A5%
 		"referer": "https://ballsodlive.com",
 		"playInNatPlayer": "true"
 		},
+
 		{
 		"name": "TruePremierFootball 3BSL",
 		"image": "https://dookeela.live/uploads/1664499681.png",
@@ -484,7 +486,7 @@ url:"https://www.andaman888th.com/%E0%B8%94%E0%B8%B9%E0%B8%9A%E0%B8%AD%E0%B8%A5%
 		"name": "TruePremierFootball 4FW4",
 		"image": "https://dookeela.live/uploads/1664499692.png",
 		"url": "https://fw4free.inwstream.com/fw4free/ch4.stream/chunklist.m3u8",
-		"referer": "https://ballsodlive.com",
+		"playInNatPlayer": "true"
 		},
 
 		{
