--- a/NexterChannel.html
+++ b/NexterChannel.html
@@ -98,7 +98,7 @@
 "name": "Nexter-GJK-IPTV-ALL",
 "author": "Nexter",
 "image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/59909a28a230b4902d15b0819d1646b74f1f5b2e/Picture/GJK1.png",
-"url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/GJK-IPTV.html",
+"url": "https://pastebin.com/raw/uLW3GBJK",
 "import": "true"
 },
 
