--- a/NexterChannel.html
+++ b/NexterChannel.html
@@ -76,6 +76,17 @@
 },
 
 
+
+{
+"name": "Nexter--หนังโรง--VOD",
+"author": "Nexter",
+"image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/GJK-Nung.png",
+"url": "https://pastebin.com/PVKsWzKL",
+"import": "true"
+},
+
+ 
+ 
 {
 "name": "Nexter--หนังออนไลน์--VOD",
 "author": "Nexter",
