--- a/NexterChannel.html
+++ b/NexterChannel.html
@@ -80,8 +80,8 @@
 {
 "name": "Nexter--หนังโรง--VOD",
 "author": "Nexter",
-"image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/GJK-Nung.png",
-"url": "https://pastebin.com/PVKsWzKL",
+"image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/logo-major.jpg",
+"url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Nexter-%E0%B8%AB%E0%B8%99%E0%B8%B1%E0%B8%87%E0%B9%82%E0%B8%A3%E0%B8%87-GJ.html",
 "import": "true"
 },
 
