--- a/NexterChannel.html
+++ b/NexterChannel.html
@@ -80,7 +80,7 @@
 {
 "name": "Nexter--หนังโรง--VOD",
 "author": "Nexter",
-"image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/major.jpg",
+"image": "https://png.pngtree.com/png-vector/20220522/ourmid/pngtree-vod-video-on-demand-png-image_4712571.png",
 "url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Nexter-%E0%B8%AB%E0%B8%99%E0%B8%B1%E0%B8%87%E0%B9%82%E0%B8%A3%E0%B8%87-GJ.html",
 "import": "true"
 },
