--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -9,10 +9,37 @@
 
 
 
+
 {  
-name:"Deadlock (2021)",
-image:"https://img.inwiptv.net/postor/20211206141618ycuok.jpg",
-url:"https://m1free.inwstream.com:1936/movie3/Deadlock_2021/Deadlock_2021_th_1080p.mp4/chunk.m3u8",
+name:"เดี่ยวประจัญบาน (2018)",
+image:"https://img.inwiptv.net/postor/20220101123610fdtfyku.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/No_Surrender_2018/No_Surrender_2018_TH_1080p.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+}, 
+
+
+
+
+    
+{  
+name:"นรกหนีนรก (1996)",
+image:"https://img.inwiptv.net/postor/2021122917194512799.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Fled_1996/Fled_1996_TH_1080p.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},    
+
+
+
+
+    
+{  
+name:"High Forces ยึดเสียดฟ้า (2024)",
+image:"https://img.inwiptv.net/postor/20241203123739dblGKcIGia7ayRgsoBFCFJp3pPu.jpg",
+url:"https://m1free.inwstream.com:1936/movie4/High_Forces_2024/High_Forces_2024_thr_z1.mp4/chunk.m3u8",
 "referer": "https://www.123-hd.com/",
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
 "playInNatPlayer": "true"
