--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -2,7 +2,7 @@
 "name": "Movie<โรงหนังของแล้ม>",
 "image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/KM-LOGO/3.png",
 "url": "https://github.com/Tonnexter/Tonnexter/edit/KhunKamMee/Nexter%20Moviees.html", 
-"author": "[โรงหนังของแล้ม <อัพเดท:03.12.2567:12.00>]",
+"author": "[<อัพเดท:03.12.2567:12.00>]",
 "info": "โรงหนังของแล้ม",
 "stations" : [
 
