--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -9,6 +9,21 @@
 
 
 
+
+{  
+name:"Striking Rescue คนเดือด​ ซัดนรก (2024)",
+image:"https://img.inwiptv.net/postor/20241207031143uTKfD1CdjCLMVITnzblaqVSTxma.jpg",
+url:"https://m1free.inwstream.com:1936/movie4/Striking_Rescue_2024/Striking_Rescue_2024_thr_z1.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+}, 
+
+
+
+
+
+    
 {  
 name:"The Harder They Fall (2021)",
 image:"https://img.inwiptv.net/postor/20211104091900AAAABUTGwhStQ06OPNmM6vtzG-6SN4dXUv4WO-GWxEiKTOcls5z8wDJYsCCzZxLoZa7d_2WfN0h7c8BrGVH3QDpCHcdfCa1nmpsRSea_oyjwERAPW8gCeV4zv1bxk4yGeQ-1.jpg",
