--- a/Nexter-PremierLeague.html
+++ b/Nexter-PremierLeague.html
@@ -1,6 +1,6 @@
 {
 "name": "NexterPremierLeague",
-"author": "Nexter",
+"author": "[<อัพเดท:08.12.2567:12.00>]",
 "image": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Picture/KM-LOGO/4.png",
 "url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Nexter-PremierLeague.html",
 "info": "Nexter-PremierLeague",
